# Validate-Agent

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  config.docker.toml  config.example.toml  docker-compose.yml
crates/agent/: Cargo.toml
crates/agent/src/: agentic.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/executor/: Cargo.toml  build.rs
crates/executor/proto/: executor.proto
crates/executor/src/: lib.rs
crates/metrics_collector/: Cargo.toml
crates/metrics_collector/src/: main.rs
dashboard/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
dashboard/src/: App.tsx  api.ts  index.css  types.ts
docker/: entrypoint.sh
docker/validator-mock/: server.py
docs/: docker.md
solana-aws/: main.tf  outputs.tf  user-data.sh  variables.tf
