[workspace]
members = [
  "crates/common",
  "crates/metrics_collector",
  "crates/agent",
  "crates/executor",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Validator Uptime Copilot"]
rust-version = "1.84"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
config = "0.14"
redis = { version = "0.24", features = ["tokio-comp", "aio", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tonic = { version = "0.11", default-features = false, features = ["transport", "codegen", "prost"] }
tonic-build = "0.11"
prost = "0.12"
prost-types = "0.12"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
