[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum.workspace = true
common = { path = "../common" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true
executor = { path = "../executor" }
tonic.workspace = true
tokio-stream.workspace = true
