[package]
name = "executor"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow.workspace = true
common = { path = "../common" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tonic.workspace = true
prost.workspace = true
tokio-stream.workspace = true
reqwest.workspace = true

[build-dependencies]
tonic-build.workspace = true
