[package]
name = "metrics_collector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
common = { path = "../common" }
rand.workspace = true
redis.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
