[package]
name = "metrics_collector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
common = { path = "../common" }
executor = { path = "../executor" }
redis.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tonic.workspace = true
tokio-stream.workspace = true
